@@ -139,8 +139,8 @@ added when -package is true.
 <DD> The <CODE>what</CODE> command will identify the word given in
 <i>string</i> in the Tcl environment and return a list of types that
 it was recognized as.  Possible types are: alias, procedure, command,
-variable, directory, file, widget, and executable.  Used by procedures
-<CODE>dump</CODE> and <CODE>which</CODE>.
+array variable, scalar variable, directory, file, widget, and executable.
+Used by procedures <CODE>dump</CODE> and <CODE>which</CODE>.
 
 <DT> <B>which</B> <i>command</i>
 <DD> Like the 'which' command of Unix shells, this will tell you if a
